继续尝试24H2之后的桌面壁纸功能

--- a/Everlasting/UI/GMMainWindow.ui
+++ b/Everlasting/UI/GMMainWindow.ui
@@ -26,7 +26,7 @@
    <enum>Qt::ClickFocus</enum>
   </property>
   <property name="windowTitle">
-   <string>星音乐</string>
+   <string>EVERLASTING</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="mouseTracking">
